--- a/app/src/main/res/layout/item_condition.xml
+++ b/app/src/main/res/layout/item_condition.xml
@@ -4,17 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/view_badge"
-        android:layout_width="20dp"
-        android:layout_height="match_parent" />
-
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:paddingStart="8dp" />
+        android:text="or"
+        android:gravity="center"
+        android:textAllCaps="true" />
 
 </LinearLayout>
